tests/errors/less_than_function.eff
(fun x -> x) < (fun x -> 2 * x) ;; (* This breaks. *)
